--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Github projects trello like cards",
   "short_name": "Githublo",
-  "version": "1.1.20",
+  "version": "1.3.0",
   "description": "Change the cards in github to match trello's workflow. 1 click will open the card itself and 2 will forward to the normal page.",
   "content_scripts": [
     {
@@ -11,5 +11,6 @@
       "css": ["window.css", "jquery.modal.min.css"],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "options_page": "ui/settings.html"
 }
