--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,16 @@
   "manifest_version": 2,
   "name": "Github projects trello like cards",
   "short_name": "Githublo",
-  "version": "1.3.2",
+  "version": "1.3.5",
   "description": "Change the cards in github to match trello's workflow. 1 click will open the card itself and 2 will forward to the normal page.",
+  "permissions": [
+    "storage"
+  ],
   "content_scripts": [
     {
       "matches": ["https://github.com/*/projects/*"],
-      "js": ["jquery-3.1.0.min.js", "jquery.modal.min.js", "gitlo.js"],
-      "css": ["window.css", "jquery.modal.min.css"],
+      "js": ["lib/jquery-3.1.0.min.js", "lib/jquery.modal.min.js", "gitlo.js"],
+      "css": ["css/window.css", "css/jquery.modal.min.css"],
       "run_at": "document_end"
     }
   ],
